apps/test/example/production/deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example
        istio.io/dataplane-mode: ambient
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: example
        image: registry.registry.svc.cluster.local/test/example:72fab207aa1418a63bb04e3093a884ee27b7b82e
        name: example
        ports:
        - containerPort: 8080
          name: http
