apps/test/example/production/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: example
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: example
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/instance: example
