apps/test/example/production/namespace-test-example-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: test-example-production
