apps/test/example/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-example-production
  labels:
    istio.io/dataplane-mode: ambient
