apps/test/example/production/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/name: example
